# flext-api

./: .dev_deps_backup_20250706  .env.example  .env.test  .gitignore  .pre-commit-config.yaml  BOILERPLATE_REDUCTION_DEMO.md  Dockerfile  FIX_PLAN.md  FLEXT_CORE_COMPLIANCE.md  FLEXT_CORE_MIGRATION_APPLIED.md  MASSIVE_CODE_REDUCTION_ACHIEVEMENT.md  Makefile  PATTERNS.md  PYDANTIC_STANDARDIZATION.md  QUALITY_GATES.md  README.md  ROOT_NAMESPACE_VALIDATION.md  TODO.md  TRANSFORMATION_PLAN.md  mypy_errors.txt  pyproject.toml  pytest-simple.ini  pytest_optimization_demo.py  requirements.txt  test_client_demo.py  test_core_utils_standalone.py  test_enterprise_standalone.py  test_quick_standalone.py  test_syntax.py
.github/workflows/: docs-maintenance.yml
docs/: ADAPTERS.md  README.md  SERIALIZATION.md  TODO.md  api-reference.md  architecture.md  builders.md  client.md  configuration.md  development.md  getting-started.md  implementation_status.md  index.md  integration.md  overview.md  phase1_implementation_plan.md  testing.md  testing_plan.md  troubleshooting.md
docs-new/: README.md
docs-new/api-reference/: core.md  protocols.md
docs-new/guides/: getting-started.md
docs/.archived/: api-reference.md  architecture.md  client.md  configuration.md  development.md  getting-started.md  index.md  integration.md
docs/api/: core.md  middleware.md  protocols.md  schemas.md  storage.md
docs/architecture/: README.md  overview.md
docs/development/: MASSIVE_CODE_REDUCTION_ACHIEVEMENT.md  ROOT_NAMESPACE_VALIDATION.md
docs/examples/: advanced-patterns.md  basic-usage.md  integration-examples.md  simplified-patterns.md
docs/guides/: README.md  configuration.md  development.md  getting-started.md  http-client.md  implementation_status.md  phase1_implementation_plan.md  security.md  skill-automation-pattern.md  testing.md  troubleshooting.md
docs/pydantic-v2-modernization/: audit_pydantic_v2.py
docs/standards/: FLEXT_CORE_COMPLIANCE.md  PATTERNS.md  QUALITY_GATES.md  python-module-organization.md
examples/: 01_basic_usage.py  01_basic_usage_corrected.py  02_advanced.py  02_advanced_features.py  README.md  __init__.py  advanced_example.py  advanced_features_example.py  advanced_patterns.py  basic_client_usage.py  basic_usage.py  basic_usage_corrected_example.py  basic_usage_example.py  boilerplate_reduction_example.py  enterprise_api_complete.py  flext_config_usage.py  massive_code_reduction.py  massive_code_reduction_examples.py  real_world_usage.py
reports/: .coverage  coverage.xml  pytest.xml
scripts/: README.md  ast_analyzer.py
src/: README.md  __init__.py  msgpack.pyi
src/flext_api/: README.md  __init__.py  __version__.py  adapters.py  api.py  api_app.py  api_client.py  api_config.py  api_exceptions.py  api_models.py  api_protocols.py  api_protocols_legacy.py  api_storage.py  api_types.py  app.py  auth_endpoints.py  authentication_type.py  base_service.py  base_service_clean.py  builder.py  builders.py  cache_strategy.py  cli.py  client.py  client_factory.py  client_status.py  config.py  config_manager.py  configuration_manager.py  connection_manager.py  constants.py  content_type.py  database_endpoints.py  database_plugin_endpoints.py  dependencies.py  enums.py  exceptions.py  factory.py  fields.py  flext_api_module.py  (+33 more)
src/flext_tests/: __init__.py  domains.py  matchers.py  utilities.py
src/flx_api/: README.md  __init__.py  __version__.py  auth_endpoints.py  database_endpoints.py  database_plugin_endpoints.py  dependencies.py  logging.yaml  main.py  pipeline_execution_endpoints.py
tests/: README.md  __init__.py  conftest.py  conftest_project.py  constants.py  factories.py  helpers.py  models.py  protocols.py  test_advanced_helpers.py  test_api_functionality.py  test_application_services.py.disabled  test_boilerplate_reducers.py  test_config.py  test_domain_layer.py.disabled  test_enhanced_application_patterns.py  test_enhanced_standalone.py  test_enterprise_patterns.py  test_enterprise_scenarios.py  test_enterprise_standalone.py  test_flext_api.py  test_flext_api_application.py  test_flext_api_comprehensive.py  test_flext_api_core_utils.py  test_flext_api_decorators.py  test_flext_api_endpoint_builder.py  test_flext_api_integrations.py  test_flext_api_microservices.py  test_flext_api_mixins.py  test_flext_api_reducers.py  test_flext_api_rest.py  test_infrastructure_layer.py.disabled  test_main.py  test_practical_helpers.py  test_quick_helpers.py  test_quick_standalone.py  test_routes_layer.py  test_universal_client.py
tests/benchmark/: performance.py
tests/benchmarks/: README.md  __init__.py  test_performance_benchmarks.py
tests/e2e/: README.md  __init__.py  test_api.py  test_api_workflow_e2e.py  workflows.py
tests/fixtures/: __init__.py
tests/helpers/: __init__.py  constants.py  models.py  protocols.py  typings.py  utilities.py
tests/integration/: README.md  __init__.py  http_client.py  test_endpoints.py  test_http_client.py  test_http_client_integration.py
tests/support/: __init__.py
tests/test_helpers/: __init__.py
tests/unit/: README.md  __init__.py  client.py  client_additional.py  client_basic.py  client_comprehensive.py  client_errors.py  client_execution.py  client_pipeline.py  config.py  constants.py  exceptions.py  models.py  models_focused.py  storage.py  storage_comprehensive.py  test_actual_domain_entities.py  test_adapters.py  test_adapters_comprehensive.py  test_adapters_simple.py  test_api.py  test_api_app_additional_paths.py  test_api_app_error_middleware_and_docs.py  test_api_app_more_branches_paths.py  test_api_app_more_paths.py  test_api_client_more_branches.py  test_api_client_non_2xx_and_plugin_cache.py  test_api_client_parse_errors_and_headers.py  test_api_client_plugins_and_http.py  test_api_client_status_and_response.py  test_api_config_extended.py  test_api_core.py  test_api_coverage.py  test_api_focused.py  test_api_models_minimal_paths.py  test_api_service_extended.py  test_api_service_more_paths.py  (+154 more)
tests_backup_original/: __init__.py  conftest.py  integration_http.py
tests_new/: README.md  __init__.py  conftest.py
(+375 files in other folders)
