[build-system]
    build-backend = "poetry.core.masonry.api"
    requires = [
        "poetry-core>=1.9.0",
    ]

[project]
    classifiers = [
        "Development Status :: 5 - Production/Stable",
        "Framework :: FastAPI",
        "Intended Audience :: Developers",
        "License :: OSI Approved :: MIT License",
        "Operating System :: OS Independent",
        "Programming Language :: Python :: 3 :: Only",
        "Programming Language :: Python :: 3.13",
        "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
        "Topic :: Software Development :: Libraries :: Python Modules",
        "Typing :: Typed",
    ]
    dependencies = [
        "cbor2 (>=5.7.0)",
        "fastapi>=0.116.0",
        "flext-core @ file:../flext-core",
        "gql (>=4.0.0)",
        "httpx>=0.28.1",
        "orjson (>=3.11.3)",
        "pydantic-settings>=2.10.1",
        "pydantic>=2.10.0",
        "websockets (>=15.0.1)",
        "msgpack (>=1.1.2)",
        "typing-extensions (>=4.15.0)",
    ]
    description = "FLEXT API - High-Performance REST API with FastAPI"
    keywords = [
        "enterprise",
        "fastapi",
        "flext",
        "http",
        "rest",
        "typed",
    ]
    name = "flext-api"
    readme = "README.md"
    requires-python = ">=3.13,<3.14"
    version = "0.9.0"
    [[project.authors]]
        email = "team@flext.sh"
        name  = "FLEXT Team"

    [[project.maintainers]]
        email = "team@flext.sh"
        name  = "FLEXT Team"

    [project.license]
        text = "MIT"

    [project.urls]
        Documentation = "https://github.com/flext-sh/flext/blob/main/README.md"
        Homepage      = "https://github.com/flext-sh/flext"
        Repository    = "https://github.com/flext-sh/flext"

    [project.optional-dependencies]
        dev = [
            "autoflake>=2.3.1",
            "black>=25.1.0",
            "codespell>=2.3.0",
            "deptry>=0.23.0",
            "isort>=6.0.1",
            "pre-commit>=4.0.1",
            "pylint>=3.3.0",
            "pyupgrade>=3.19.0",
            "radon>=6.0.1",
            "ruff>=0.12.3",
            "vulture>=2.13",
        ]
        security = [
            "bandit>=1.8.0",
            "pip-audit>=2.7.3",
        ]
        test = [
            "factory-boy>=3.3.1",
            "faker>=37.4.0",
            "hypothesis>=6.125.0",
            "pytest-benchmark>=5.1.0",
            "pytest-clarity>=1.0.1",
            "pytest-cov>=6.2.0",
            "pytest-deadfixtures>=2.2.1",
            "pytest-env>=1.1.5",
            "pytest-mock>=3.14.0",
            "pytest-randomly>=3.16.0",
            "pytest-sugar>=1.0.0",
            "pytest-timeout>=2.4.0",
            "pytest-xdist>=3.8.0",
            "pytest>=8.4.0",
        ]
        typings = [
            "django-stubs>=5.2.2",
            "types-ldap3>=2.9.13.20250622",
            "types-protobuf>=6.30.2.20250703",
            "types-psutil>=7.0.0",
            "types-psycopg2>=2.9.21.20250718",
            "types-python-dateutil>=2.9.0",
            "types-pyyaml>=6.0.12",
            "types-redis>=4.6.0",
            "types-requests>=2.32.4",
            "types-setuptools>=80.9.0",
            "types-toml>=0.10.8.20240310",
        ]

[tool]
    [tool.poetry]
        [[tool.poetry.packages]]
            from    = "src"
            include = "flext_api"

        [tool.poetry.dependencies]
            python = ">=3.13,<3.14"

        [tool.poetry.group.dev.dependencies]
            bandit       = "^1.8.6"
            faker        = "^37.5.3"
            pip-audit    = "^2.9.0"
            pyrefly      = "^0.34.0"
            pytest       = "^8.4.1"
            pytest-cov   = "^6.2.1"
            pytest-httpx = "^0.35.0"

    [tool.bandit]
        extend = "../.bandit-shared.toml"
        skips = [
            "B101",
            "B104",
            "B105",
            "B601",
        ]

    [tool.coverage]
        extend = "../.coverage-shared.toml"

    [tool.deptry]
        exclude = [
            ".archive",
            ".git",
            ".meltano",
            ".mypy_cache",
            ".pyrefly_cache",
            ".pytest_cache",
            ".ruff_cache",
            ".venv",
            "__pycache__",
            "build",
            "dist",
            "htmlcov",
            "node_modules",
            "reports",
            "tests",
            "tests",
            "vendor",
            "venv",
        ]
        known_first_party = [
            "flext_api",
        ]
        pep621_dev_dependency_groups = [
            "dev",
            "security",
            "test",
            "typings",
        ]

    [tool.pytest.ini_options]
        addopts = [
            "--color=yes",
            "--cov-branch",
            "--cov-context=test",
            "--cov-report=html:htmlcov",
            "--cov-report=term-missing:skip-covered",
            "--cov-report=xml:reports/coverage.xml",
            "--cov=src/flext_api",
            "--strict-config",
            "--strict-markers",
            "--tb=short",
            "-ra",
        ]
        markers = [
            "api: FastAPI endpoint tests",
            "architecture: Architectural pattern tests",
            "benchmark: Performance benchmark tests",
            "builder: Builder pattern tests",
            "client: HTTP client tests",
            "concurrency: Concurrency and tests",
            "core: Core functionality tests",
            "e2e: End-to-end tests with real services",
            "integration: Integration tests (may require external services)",
            "memory: Memory usage and leak tests",
            "mock: Tests using mocks heavily",
            "performance: Performance and load tests",
            "race_condition: Race condition and thread safety tests",
            "real: Tests using real external services",
            "regression: Regression tests for bug fixes",
            "security: Security-related tests",
            "skip: Tests that should be skipped",
            "slow: Slow running tests (>1s)",
            "smoke: Quick smoke tests for CI",
            "timeout: Tests with timeout constraints",
            "unit: Fast unit tests with mocks",
            "xfail: Tests expected to fail",
        ]
        minversion = "8.0"
        python_classes = [
            "Test*",
        ]
        python_files = [
            "*_test.py",
            "test_*.py",
        ]
        python_functions = [
            "test_*",
        ]
        testpaths = [
            "tests",
        ]

    [tool.pyrefly]
        python-version = "3.13"
        search-path = [
            "examples",
            "src",
            "tests",
            "../flext-core/src",
        ]

    [tool.ruff]
        extend = "../ruff-shared.toml"

    [tool.ruff.lint.isort]
        known-first-party = [
            "flext_api",
        ]
