[build-system]
build-backend = "poetry.core.masonry.api"
requires = [ "poetry-core>=2" ]

[project]
name = "flext-api"
version = "0.12.0-dev"
description = "FLEXT API - High-Performance REST API with FastAPI"
readme = "README.md"
keywords = [
  "enterprise",
  "fastapi",
  "flext",
  "http",
  "rest",
  "typed",
]
license = "MIT"
maintainers = [ { email = "team@flext.sh", name = "FLEXT Team" } ]
authors = [ { email = "team@flext.sh", name = "FLEXT Team" } ]
requires-python = ">=3.13,<3.14"
classifiers = [
  "Development Status :: 4 - Beta",
  "Development Status :: 5 - Production/Stable",
  "Framework :: FastAPI",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.13",
  "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
dependencies = [
  "cbor2>=5.7",
  "fastapi>=0.116",
  "flext-core @ ./.flext-deps/flext-core",
  "flext-web @ ./.flext-deps/flext-web",
  "gql>=4",
  "httpx>=0.28.1",
  "msgpack>=1.1.2",
  "orjson>=3.11.3",
  "pydantic>=2.12.3",
  "pydantic-core>=2.41.4",
  "pydantic-settings>=2.10.1",
  "typing-extensions>=4.15",
  "websockets>=15.0.1",
]
optional-dependencies.dev = [
  "autoflake>=2.3.1",
  "black>=25.1",
  "codespell>=2.3",
  "deptry>=0.23",
  "isort>=6.0.1",
  "pre-commit>=4.0.1",
  "pylint>=3.3",
  "pyupgrade>=3.19",
  "radon>=6.0.1",
  "ruff>=0.12.3",
  "vulture>=2.13",
]
optional-dependencies.security = [
  "bandit>=1.8",
  "pip-audit>=2.7.3",
]
optional-dependencies.test = [
  "factory-boy>=3.3.1",
  "faker>=37.4",
  "hypothesis>=6.125",
  "pytest>=8.4",
  "pytest-asyncio>=0.25",
  "pytest-benchmark>=5.1",
  "pytest-clarity>=1.0.1",
  "pytest-cov>=6.2",
  "pytest-deadfixtures>=2.2.1",
  "pytest-env>=1.1.5",
  "pytest-mock>=3.14",
  "pytest-randomly>=3.16",
  "pytest-sugar>=1",
  "pytest-timeout>=2.4",
  "pytest-xdist>=3.8",
]
optional-dependencies.typings = [
  "django-stubs>=5.2.2",
  "types-ldap3>=2.9.13.20250622",
  "types-protobuf>=6.30.2.20250703",
  "types-psutil>=7",
  "types-psycopg2>=2.9.21.20250718",
  "types-python-dateutil>=2.9",
  "types-pyyaml>=6.0.12",
  "types-redis>=4.6",
  "types-requests>=2.32.4",
  "types-setuptools>=80.9",
  "types-toml>=0.10.8.20240310",
]
urls.Documentation = "https://github.com/flext-sh/flext/blob/main/README.md"
urls.Homepage = "https://github.com/flext-sh/flext"

[tool]
[tool.poetry]
dependencies.python = ">=3.13,<3.14"
dependencies.flext-core.develop = true
dependencies.flext-core.path = ".flext-deps/flext-core"
dependencies.flext-web.develop = true
dependencies.flext-web.path = ".flext-deps/flext-web"
group.dev.dependencies.bandit = "^1.8.6"
group.dev.dependencies.faker = "^40.1.0"
group.dev.dependencies.pip-audit = "^2.9.0"
group.dev.dependencies.pyrefly = "^0.46.3"
group.dev.dependencies.pytest = "^9.0.2"
group.dev.dependencies.pytest-asyncio = ">=0.27.0"
group.dev.dependencies.pytest-cov = "^7.0.0"
group.dev.dependencies.pytest-httpx = "^0.36.0"
group.dev.dependencies.opentelemetry-api = ">=1.39.1"
group.dev.dependencies.opentelemetry-sdk = ">=1.39.1"
group.dev.dependencies.prompt-toolkit = ">=3.0.52"
group.dev.dependencies.sqlparse = ">=0.5.5"
packages = [ { from = "src", include = "flext_api" } ]

[tool.ruff]
extend = "../ruff-shared.toml"
lint.isort.known-first-party = [ "flext_api" ]

[tool.codespell]
ignore-words-list = "dn,cn,ou,uid,sn,aci,acl,ldif,flext,FLEXT,dbt,oic,wms,grpc,meltano,protobuf,creds,assertIn"
skip = """\
  .git,*.lock,*.egg-info,dist,build,.venv,__pycache__,.mypy_cache,.pytest_cache,.ruff_cache,node_modules,vendor,*.pb2*.\
  py\
  """

[tool.deptry]
known_first_party = [
  "flext",
  "flext_quality",
]
exclude = [
  ".archive",
  ".git",
  ".meltano",
  ".mypy_cache",
  ".pytest_cache",
  ".ruff_cache",
  ".venv",
  "__pycache__",
  "build",
  "dist",
  "htmlcov",
  "node_modules",
  "reports",
  "scripts",
  "tests",
  "vendor",
  "venv",
]
extend_exclude = [
  "flexcore/",
  "flext-.*/",
]
pep621_dev_dependency_groups = [
  "dev",
  "docs",
  "security",
  "test",
  "typings",
]

[tool.pytest]
ini_options.addopts = [
  "--strict-config",
  "--strict-markers",
  "--tb=short",
  "-p no:sugar",
  "-q",
  "-ra",
  "--timeout=30",
  "--timeout-method=signal",
  "--durations=0",
]
ini_options.filterwarnings = [
  "ignore::DeprecationWarning:pyasn1(.*|$)",
]
ini_options.pythonpath = [
  ".",
  "src",
]
ini_options.markers = [
  "docker: marca testes que requerem Docker",
  "e2e: marca testes como testes de integração end-to-end",
  "edge_cases: marca testes de casos extremos",
  "integration: marca testes como testes de integração",
  "integrity: marca testes de integridade",
  "oracle: marca testes específicos do Oracle",
  "performance: marca testes de performance",
  "resilience: marca testes de resiliência",
  "slow: marca testes como execução lenta",
  "stress: marca testes de stress",
  "unit: marca testes como testes unitários",
]
ini_options.minversion = "8.0"
ini_options.python_classes = [
  "Test*",
]
ini_options.python_files = [
  "*_test.py",
  "*_tests.py",
  "test_*.py",
]
ini_options.python_functions = [
  "test_*",
]
ini_options.testpaths = [
  "tests/",
]

[tool.coverage]
run.branch = true
run.omit = [
  "*/__pycache__/*",
  "*/_pb2*.py",
  "*/conftest.py",
  "*/tests/*",
]
run.relative_files = true
run.source = [ "src/flext_api" ]
report.exclude_lines = [
  "@abstractmethod",
  "^\\s*\\.\\.\\.\\s*$",
  "def __repr__",
  "def __str__",
  'if __name__ == "__main__":',
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "pragma: no cover",
  "raise NotImplementedError",
]
report.fail_under = 100
report.partial_branches = [
  "pragma: no branch",
]
report.precision = 2
report.show_missing = true
report.skip_empty = true
html.directory = "htmlcov"
xml.output = "coverage.xml"

[tool.pyrefly]
project-excludes = [ "**/*_pb2*.py", "**/*_pb2_grpc*.py" ]
search-path = ["..", "../typings", "../typings/generated", "src", "tests", "examples", "scripts"]

[tool.pyright]
enableTypeIgnoreComments = false
extraPaths = ["..", "src", "tests", "examples", "scripts", "../typings", "../typings/generated", ".flext-deps/flext-core/src", ".flext-deps/flext-web/src"]
include = [ "src", "scripts", "tests", "examples" ]
exclude = [
  "**/*.pb2.py",
  "**/*.pb2_grpc.py",
  ".git/",
  ".meltano/",
  ".mypy_cache/",
  ".pytest_cache/",
  ".ruff_cache/",
  "__pycache__/",
  "build/",
  "dist/",
  "node_modules/",
  "target/",
]
pythonPlatform = "Linux"
pythonVersion = "3.13"
reportAssertAlwaysTrue = false
reportCallInDefaultInitializer = "error"
reportCallIssue = "error"
reportConstantRedefinition = "error"
reportDuplicateImport = "error"
reportFunctionMemberAccess = "error"
reportGeneralTypeIssues = "error"
reportImplicitRelativeImport = false
reportImplicitStringConcatenation = "warning"
reportImportCycles = "error"
reportIncompatibleMethodOverride = "error"
reportIncompatibleVariableOverride = "error"
reportIncompleteStub = "warning"
reportInconsistentConstructor = "error"
reportInvalidStringEscapeSequence = "error"
reportInvalidStubStatement = "error"
reportInvalidTypeForm = false
reportInvalidTypeVarUse = "error"
reportMatchNotExhaustive = "warning"
reportMissingImports = "error"
reportMissingModuleSource = "error"
reportMissingParameterType = "error"
reportMissingSuperCall = "warning"
reportMissingTypeArgument = "error"
reportMissingTypeStubs = "warning"
reportOptionalCall = "error"
reportOptionalContextManager = "error"
reportOptionalIterable = "error"
reportOptionalMemberAccess = "error"
reportOptionalOperand = "error"
reportOptionalSubscript = "error"
reportPrivateUsage = false
reportPropertyTypeMismatch = "error"
reportSelfClsParameterName = "error"
reportTypedDictNotRequiredAccess = "error"
reportUnboundVariable = "error"
typeCheckingMode = "strict"
reportUninitializedInstanceVariable = "warning"
reportUnknownArgumentType = false
reportUnknownLambdaType = "error"
reportUnknownMemberType = false
reportUnknownParameterType = false
reportUnknownVariableType = false
reportUnnecessaryCast = "warning"
reportUnnecessaryComparison = "warning"
reportUnnecessaryIsInstance = "warning"
reportUnnecessaryTypeIgnoreComment = "warning"
reportUnsupportedDunderAll = "error"
reportUntypedBaseClass = "error"
reportUntypedClassDecorator = "error"
reportUntypedFunctionDecorator = "error"
reportUntypedNamedTuple = "error"
reportUnusedCallResult = "warning"
reportUnusedClass = "warning"
reportUnusedCoroutine = "error"
reportUnusedExpression = "warning"
reportUnusedFunction = "warning"
reportUnusedImport = "error"
reportUnusedVariable = "error"
reportWildcardImportFromLibrary = "error"
strictDictionaryInference = true
strictListInference = true
strictParameterNoneValue = true
strictSetInference = true
useLibraryCodeForTypes = true

[tool.bandit]
skips = [ "B404", "B603", "B607", "B105", "B608" ]
exclude_dirs = [
  ".git",
  ".mypy_cache",
  ".pytest_cache",
  ".ruff_cache",
  ".venv",
  "__pycache__",
  "build",
  "dist",
  "node_modules",
  "tests",
  "vendor",
]

[tool.complexipy]
max_complexity = 15
output_format = "plain"

[tool.vulture]
exclude = [
  ".*/examples/",
  ".*/scripts/",
  ".*/tests/",
  ".coverage.*",
  ".git/",
  ".mypy_cache/",
  ".pytest_cache/",
  ".ruff_cache/",
  ".venv/",
  "__pycache__/",
  "build/",
  "dist/",
  "node_modules/",
  "tests/",
  "vendor/",
]
min_confidence = 80
paths = [
  "**/src",
  "src",
]
sort_by_size = true
verbose = false
